@@ -31,6 +31,7 @@ DATA_DIR=$hhconfig_directories_data
 SQ="'"
 PREDICT=0;
 SUPPRESS_WARNINGS=0
+export PGPASSWORD=$hhconfig_database_owner_pass
 
 set -e
 NEW_DDL_SERIAL=8
