@@ -31,7 +31,7 @@ set -e # exit if any command yields a non 0 exit status
 WD="$hhconfig_directories_data"
 INPUT="XML"
 OUTPUT="DB"
-CONNSTR="dbname=$hhconfig_database_name port=$hhconfig_database_port host=$hhconfig_database_host"
+CONNSTR="dbname=$hhconfig_database_name port=$hhconfig_database_port host=$hhconfig_database_host password=$hhconfig_database_owner_pass"
 START_DATE=""
 RSSAC_FLAG=""
 RESERVED_CPUS=0
@@ -40,6 +40,7 @@ ARGS=""
 LOG="dsc-extractor.out"
 APPEND_LOG=0
 REQUIRED_API_VERSION=DB_VERSION
+export PGPASSWORD=$hhconfig_database_owner_pass
 
 usage () {
     echo "${PROG} - finds all input files in working directory and processes to output format"
