@@ -423,8 +423,8 @@ if (GET$type == "initPltType") {
 }
 
 # TODO(asap): check the options are all specified, not defaulted
-dsccon <- try(dbConnect(dbdrv, dbname = hh_config$database$name, user = hh_config$database$read_user, port = hh_config$database$port, host = hh_config$database$host))
-dbconstr <<-paste('dbname = ', hh_config$database$name, ', user = ', hh_config$database$read_user, ', port = ', hh_config$database$port, ', host = ', hh_config$database$host, sep="")
+dsccon <- try(dbConnect(dbdrv, dbname = hh_config$database$name, user = hh_config$database$read_user, port = hh_config$database$port, host = hh_config$database$host, password = hh_config$database$read_pass))
+dbconstr <<-paste('dbname = ', hh_config$database$name, ', user = ', hh_config$database$read_user, ', port = ', hh_config$database$port, ', host = ', hh_config$database$host, ', password = ', hh_config$database$read_pass, sep="")
 
 if (class(dsccon) != "try-error") {
 	dbSendQuery(dsccon, "set statement_timeout to 300000;")
